# auth_service_rust

./: .env  .gitignore  Cargo.toml  README.md
config/: configuration.yaml
migrations/: 20221115190110_create_users_table.sql  20221127182247_create_users_table.sql  20221130165710_create_users_table.sql
migrations/2022-09-19-153648_users/: up.sql
migrations/2022-10-05-112235_tokens/: down.sql  up.sql
migrations/2022-10-12-181305_token_default_timestamp/: down.sql  up.sql
scripts/: init_db.sh
src/: api_documentation.rs  bootstrap.rs  config.rs  configuration.rs  env_var.rs  error.rs  lib.rs  main.rs  schema.rs  telemetry.rs  utils.rs
src/auth_token/: error.rs  token.rs
src/database/: mod.rs
src/database/auth/: create_user.rs  get_user.rs  mod.rs  models.rs  token.rs
src/domain/: model.rs
src/domain/user/: auth_user.rs  error.rs  mod.rs  model.rs  new_user.rs  user_data.rs
src/handlers/: login.rs  mod.rs  register.rs
src/password_manager/: manager.rs
src/repository/: authentication.rs  mod.rs  registration.rs
src/repository/password_data/: error.rs  mod.rs  password.rs
src/route/: domain.rs  mod.rs
src/route/auth/: authentication.rs  error.rs  login.rs  mod.rs  model.rs  registration.rs
src/route/dto/: auth_data.rs  auth_response.rs  error.rs  mod.rs
src/route/registration/: domain.rs  error.rs  mod.rs  model.rs  registration.rs
src/routes/: auth_route.rs  mod.rs
src/routes/model/: auth_request.rs  error_response.rs
src/routes/routes_object/: login_response.rs  mod.rs
src/scripts/: init_db.sh
src/scripts/migrations/: 20221115185949_create_users_table.sql
src/tests/: mod.rs  spawn_app.rs
src/tests/domain/: domain.rs
src/tests/route/: auth.rs
src/token_manager/: error.rs  token.rs
tests/: mod.rs
tests/integration/: auth.rs  authentication.rs  mod.rs  registration.rs
tests/lib/: helpers.rs
tests/unit/: domain.rs  mod.rs
tests/unit/domain/: domain.rs
tests/unit/password_manager/: mod.rs  password_manager.rs
tests/unit/repository/: authentication.rs  mod.rs  password.rs  registration.rs
