[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.130", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
argon2 = "0.2.1"
serde_json = "1.0.68"
rand_core = { version = "0.6", features = ["std"] }
base64 = "0.13.0"
sqlx = { version = "0.6", default-features = false, features = [
    "runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"
]}
config = { version = "0.13", default-features = false, features = ["yaml"] }
anyhow = "1.0.66"

[dev-dependencies]
reqwest = "0.11"