[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web service
actix-web = "4.2.1"

#db
sqlx = { version = "0.6", default-features = false, features = [
    "runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"
]}

#async
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# ser / de
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

# error
anyhow = "1.0.66"

# telemetry
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.6"
secrecy = { version = "0.8", features = ["serde"] }
log = "0.4"

# other
uuid = { version = "1", features = ["v4"] }
rand_core = { version = "0.6", features = ["std"] }
base64 = "0.13.0"
config = { version = "0.13", default-features = false, features = ["yaml"] }
once_cell = "1.16.0"

[dev-dependencies]
reqwest = "0.11"
