[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "auth_service"

[dependencies]
# web service
actix-web = "4.2.1"

#db
sqlx = { version = "0.6", default-features = false, features = [
    "runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"
]}

#async
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# ser / de
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

# error
anyhow = "1.0.66"
thiserror = "1.0.24"

# telemetry
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.6"
secrecy = { version = "0.8", features = ["serde"] }
log = "0.4"

#auth
jwt = "0.16.0"
chrono = "0.4.23"
hmac = "0.12.1"
crypto-common = { version = "0.1.6", features = ["rand_core"] }
sha2 = "0.10.6"

# other
uuid = { version = "1", features = ["v4"] }
rand_core = { version = "0.6", features = ["std"] }
base64 = "0.13.0"
config = { version = "0.13", default-features = false, features = ["yaml"] }
unicode-segmentation = "1.10.0"
argon2 = "0.4.1"

# tests
claim = "0.5"
once_cell = "1.16.0"
reqwest = "0.11"

# swagger
utoipa = { version = "2.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "2", features = ["actix-web"] }